# quanta

./: .gitignore  Quanta - Trading Analytics.html  edgeful research.md
quanta-app/: index.html  package-lock.json  package.json  tsconfig.app.json
quanta-app/src/: App.tsx  index.css  middleware.ts
quanta-pipeline/: .env.example  Dockerfile  pyproject.toml
quanta-pipeline/src/: config.py  db.py  orchestrator.py
quanta-pipeline/src/aggregation/: __init__.py  aggregator.py  queries.py
quanta-pipeline/src/detection/: __init__.py  fair_value_gaps.py  gex.py  key_opens.py  liquidity_sweeps.py  macros.py  models.py  news_candles.py  opening_gaps.py  order_blocks.py  power_of_3.py  resample.py
quanta-pipeline/src/pipeline/: config.py  db.py  logging_setup.py  main.py
quanta-pipeline/src/pipeline/ingestion/: _retry.py  databento_ingest.py  forexfactory_ingest.py  yfinance_ingest.py
quanta-pipeline/src/pipeline/monitoring/: health.py
quanta-pipeline/tests/: conftest.py  test_aggregator.py  test_databento.py  test_fair_value_gaps.py  test_forexfactory.py  test_gex.py  test_key_opens.py  test_liquidity_sweeps.py  test_macros.py  test_news_candles.py  test_opening_gaps.py  test_order_blocks.py  test_power_of_3.py  test_yfinance.py
quanta-pipeline/tests/fixtures/: news_samples.py  ohlcv_samples.py
supabase/: config.toml
supabase/migrations/: 20260709000001_extensions.sql  20260709000002_admin_users.sql  20260709000003_ohlcv_1m.sql  20260709000004_news_events.sql  20260709000005_sessions.sql  20260709000006_fvg_instances.sql  20260709000008_liquidity_levels.sql  (+15 more)
(+77 files in other folders)
