[project]
name = "quanta-pipeline"
version = "0.1.0"
requires-python = ">=3.11"

dependencies = [
    "databento>=0.20.0",
    "yfinance==0.2.54",
    "requests>=2.31",
    "beautifulsoup4>=4.12",
    "lxml>=5.1",
    "apscheduler>=3.10",
    "psycopg2>=2.9",
    "tenacity>=8.2",
    "numpy>=1.26",
    "pandas>=2.1",
    "supabase>=2.0",
]

[project.scripts]
quanta-pipeline = "pipeline.main:main"

[tool.setuptools.packages.find]
where = ["src"]
